--- a/poo.html
+++ b/poo.html
@@ -88,7 +88,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 30 pts <b>(11/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)</li>
-					<li>Prova 2 - 30 pts <b>(09/05)</b> <!--<img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 06, 07 e 08 </i>)--></li>
+					<li>Prova 2 - 30 pts <b>(09/05)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 06, 07 e 08 </i>)</li>
 					<li>Prova 3 - 30 pts <b>(20/06)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)--></li>
 					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 5 pts <b>(09/05)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li>Lista 01 - 5 pts <b>(09/05)</b></li>
