--- a/poo.html
+++ b/poo.html
@@ -89,7 +89,7 @@
 					<ul>
 					<li>Prova 1 - 30 pts <b>(11/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)</li>
 					<li>Prova 2 - 30 pts <b>(09/05)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 06, 07 e 08 </i>)</li>
-					<li>Prova 3 - 30 pts <b>(20/06)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)--></li>
+					<li>Prova 3 - 30 pts <b>(20/06)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)</li>
 					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 5 pts <b>(09/05)</b> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
 					<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 5 pts <b>(20/06)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li>Lista 01 - 5 pts <b>(09/05)</b></li>-->
@@ -108,9 +108,9 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 09 - Polimorfismo</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/g4DSfdpz0d4"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=2_cv_UWmumY"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação </a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=2_cv_UWmumY"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação </a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)</li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> Ver Videoaula </a>)</li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula10 - Componentes_Implantacao.pdf"> Aula 10 - Diagramas de Componentes e Implantação</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/Aula11 - Scrum.pdf"> Aula 11 - Scrum</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/Aula12- Extreme Programming.pdf"> Aula 12 - Programação Extrema (XP)</a></li>
