--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 				See my <a href="papers/edu-cv.pdf"><u>academic vitae</u></a> for a summary. I earned my PhD in Software Engineering in 2019 from UFU under the supervision of <a href="http://lascam.facom.ufu.br/cms/"> Dr. Marcelo Maia.</a></span> 
 				<h2>
 				<a href="index.html"><i class="icon-home"></i></a></li>
-				<a href="https://www.facebook.com/eduardo.campos.9256028"><i class="icon-facebook"></i></a>
 				<a href="mailto:eduardocunha11@gmail.com"><i class="icon-mail"></i></a>
 				<a href="https://twitter.com/eduardocunha080"><i class="icon-twitter"></i></a>
 				<a href="https://www.linkedin.com/in/eduardo-cunha-campos-82319a47/"><i class="icon-linkedin"></i></a>
 				<a href="material.html"><i class="icon-book"></i></a>
 				<a href="aulas/gsi526/agenda_atendimento_TCC.pdf"><i class="icon-watch"></i></a>
 				<a href="aulas/gsi526/temas_TCC_eduardo_2023-1.pdf"><i class="icon-eye"></i></a>
+				<a href="https://www.youtube.com/watch?v=KsGnf37hIko"> <img src="images/495.svg" alt="Klimed" height="28" width="28"></a>
 				</h2>
 			</div>
 		</div>
